--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    //google directions
+    implementation 'com.google.maps:google-maps-services:0.18.2'
+    implementation 'org.slf4j:slf4j-simple:1.7.25'
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.6.2' // 레트로핏 설치 (필수)
