--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
 
 
     implementation 'com.github.john990:WaveView:v0.9'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 }
