--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.travel">
 
-    <uses-permission android:name="android:permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android:permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -14,9 +13,12 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/travel"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.Travel">
-        <activity android:name=".OtherPathActivity"></activity>
+        android:theme="@style/Theme.Travel"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".SplashActivity">
+
+        </activity>
+        <activity android:name=".OtherPathActivity" />
         <activity android:name=".MapActivity" />
         <activity android:name=".UserPathActivity" />
         <activity android:name=".UserPlaceActivity" />
@@ -31,11 +33,10 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDCsK1Y92o6guzI4h0jmFHPc6Yz43EUENE"/>
-
-        <meta-data android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
-
+            android:value="AIzaSyDCsK1Y92o6guzI4h0jmFHPc6Yz43EUENE" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
