--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2' // 컨버터 (선택)
     implementation 'com.google.code.gson:gson:2.8.5' //GSON (선택)
 
-
     implementation 'com.github.john990:WaveView:v0.9'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    implementation "com.zhihu.android:matisse:0.5.3-beta3"    // gallery 선택하기
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.12'     //rxjava 사용
+    implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'   // rxjava에서의 permission
 }
