--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,14 +15,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Travel"
         android:usesCleartextTraffic="true">
-        <activity android:name=".SplashActivity">
-
-        </activity>
+        <activity android:name=".SplashActivity"></activity>
         <activity android:name=".OtherPathActivity" />
         <activity android:name=".MapActivity" />
         <activity android:name=".UserPathActivity" />
         <activity android:name=".UserPlaceActivity" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".PlaceDetailActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
