--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'com.google.android.libraries.places:places:2.4.0'
+    implementation 'com.google.maps.android:android-maps-utils:2.2.5'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -52,4 +53,7 @@ dependencies {
 
     implementation 'com.github.john990:WaveView:v0.9'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+//    //calendar
+//    implementation 'org.naishadhparmar.zcustomcalendar:zcustomcalendar:1.0.1'
 }
