before merging whale

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/travel"
+        android:icon="@mipmap/ic_launcher_travei"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/travel"
+        android:roundIcon="@mipmap/ic_launcher_travei_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Travel"
         android:usesCleartextTraffic="true">
-
+        <activity android:name=".CalendarActivity"></activity>
         <activity android:name=".PathMapActivity" />
         <activity android:name=".SplashActivity">
             <intent-filter>
@@ -26,13 +26,11 @@
         </activity>
         <activity android:name=".OtherPathActivity" />
         <activity android:name=".MapActivity" />
-        <activity android:name=".UserPathActivity"/>
+        <activity android:name=".UserPathActivity" />
         <activity android:name=".UserPlaceActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".PlaceDetailActivity" />
-        <activity android:name=".LoginActivity">
-
-        </activity>
+        <activity android:name=".LoginActivity"></activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
