--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,6 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.12'     //rxjava 사용
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'   // rxjava에서의 permission
 
+    //calendar
+    implementation 'org.naishadhparmar.zcustomcalendar:zcustomcalendar:1.0.1'
 }
