--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/travel"
+        android:icon="@mipmap/ic_launcher_whale"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/travel"
+        android:roundIcon="@mipmap/ic_launcher_whale_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Travel"
         android:usesCleartextTraffic="true">
