--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Travel"
         android:usesCleartextTraffic="true">
-
-        <activity android:name=".CheckDayActivity"></activity>
+        <activity android:name=".JoinActivity"></activity>
+        <activity android:name=".CheckDayActivity" />
         <activity android:name=".CalendarActivity" />
-
         <activity android:name=".PathMapActivity" />
         <activity android:name=".SplashActivity">
             <intent-filter>
@@ -33,9 +32,8 @@
         <activity android:name=".UserPlaceActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".PlaceDetailActivity" />
-
-        <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".ImageFullActivity"></activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".ImageFullActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
