--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,9 @@ dependencies {
     //circle imageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    implementation 'com.mxn.soul:flowingdrawer-core:2.1.0'
+    implementation 'com.nineoldandroids:library:2.4.0'
+
+    implementation 'com.specyci:residemenu:1.6+'
+
 }
