--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Travel"
         android:usesCleartextTraffic="true">
-
-        <activity android:name=".JoinCalendarActivity"></activity>
-
-        <activity android:name=".JoinActivity"></activity>
-        <activity android:name=".MyPageActivity"></activity>
+        <activity android:name=".FrontActivity"></activity>
+        <activity android:name=".JoinCalendarActivity" />
+        <activity android:name=".JoinActivity" />
+        <activity android:name=".MyPageActivity" />
         <activity android:name=".CheckDayActivity" />
         <activity android:name=".CalendarActivity" />
         <activity android:name=".PathMapActivity" />
