--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
     <uses-permission android:name="android:permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -14,11 +15,10 @@
         android:roundIcon="@mipmap/ic_launcher_whale_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Travel"
-        android:usesCleartextTraffic="true">
-<!--        <activity android:name=".FrontActivity"></activity>-->
+        android:usesCleartextTraffic="true"
+        android:requestLegacyExternalStorage="true">
         <activity android:name=".JoinCalendarActivity" />
         <activity android:name=".JoinActivity" />
-<!--        <activity android:name=".MyPageActivity" />-->
         <activity android:name=".MainActivity_ImageChange"/>
         <activity android:name=".CheckDayActivity" />
         <activity android:name=".CalendarActivity" />
